src/objects/Apttus_Config2__PriceRuleEntry__c.object
<CustomObject>
    <description>Represents a single entry in a price rule</description>
    <fields>
        <fullName>Apttus_Config2__AdjustmentAmount__c</fullName>
        <description>The price adjustment amount.</description>
        <inlineHelpText>Used in conjunction with the Rate Value Type field, the amount for the selected rate value type.</inlineHelpText>
        <label>Adjustment Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AdjustmentReason__c</fullName>
        <description>The adjustment reason.</description>
        <inlineHelpText>The adjustment reason.</inlineHelpText>
        <label>Adjustment Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AdjustmentType__c</fullName>
        <description>The price adjustment type</description>
        <inlineHelpText>Indicates the rate type to be used. It can be Per Unit Amount, %, or Total Amount. 
For Rebates, it indicates benefit or deduction rate type. 
For Promotions, it indicates discount rate type
For Pricing, it indicates discount or markup</inlineHelpText>
        <label>Adjustment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>% Discount</fullName>
                </value>
                <value>
                    <fullName>Discount Amount</fullName>
                </value>
                <value>
                    <fullName>% Markup</fullName>
                </value>
                <value>
                    <fullName>Markup Amount</fullName>
                </value>
                <value>
                    <fullName>Price Override</fullName>
                </value>
                <value>
                    <fullName>Price Factor</fullName>
                </value>
                <value>
                    <fullName>% Benefit</fullName>
                </value>
                <value>
                    <fullName>Benefit Amount</fullName>
                </value>
                <value>
                    <fullName>Benefit Per Unit</fullName>
                </value>
                <value>
                    <fullName>Deduction Amount</fullName>
                </value>
                <value>
                    <fullName>Points</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AdjustmentValueSource__c</fullName>
        <description>The source for dynamic adjustment values</description>
        <inlineHelpText>The source for dynamic adjustment values</inlineHelpText>
        <label>Adjustment Value Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AdjustmentValueType__c</fullName>
        <description>The adjustment value type</description>
        <inlineHelpText>The adjustment value type</inlineHelpText>
        <label>Adjustment Value Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Constant</fullName>
                    <default>true</default>
                    <label>Constant</label>
                </value>
                <value>
                    <fullName>Reference</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BandSize__c</fullName>
        <description>The band size for a weighted range</description>
        <label>Band Size</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ChargeTypes__c</fullName>
        <description>The list of charge types associated with the entry</description>
        <inlineHelpText>The list of charge types associated with the entry</inlineHelpText>
        <label>Charge Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Condition__c</fullName>
        <description>The condition specification</description>
        <label>Condition</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Dimension1ListValue__c</fullName>
        <description>The list of values for the first dimension. Only applicable to List dimensions</description>
        <inlineHelpText>The list of values for the first dimension. Only applicable to List dimensions</inlineHelpText>
        <label>Dimension 1 List Value</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Dimension1Value__c</fullName>
        <description>The value for the first dimension. Only applicable to Matrix based rules.</description>
        <label>Dimension 1 Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Dimension2ListValue__c</fullName>
        <description>The list of values for the second dimension. Only applicable to List dimensions</description>
        <inlineHelpText>The list of values for the second dimension. Only applicable to List dimensions</inlineHelpText>
        <label>Dimension 2 List Value</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Dimension2Value__c</fullName>
        <description>The value for the second dimension. Only applicable to Matrix based rules.</description>
        <label>Dimension 2 Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Dimension3ListValue__c</fullName>
        <description>The list of values for the third dimension. Only applicable to List dimensions</description>
        <inlineHelpText>The list of values for the third dimension. Only applicable to List dimensions</inlineHelpText>
        <label>Dimension 3 List Value</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Dimension3Value__c</fullName>
        <description>The value for the third dimension</description>
        <label>Dimension 3 Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EndFactor__c</fullName>
        <description>The end factor for a weighted range.</description>
        <label>End Factor</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__InclusionMethod__c</fullName>
        <description>The inclusion rule method. Only applicable to Inclusion based rules.</description>
        <label>Inclusion Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Any Product</fullName>
                </value>
                <value>
                    <fullName>All Products</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LoyaltyLevel__c</fullName>
        <description>Describes the loyalty level applied when conditions are met.</description>
        <label>Loyalty Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MatchInAsset__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether to match products in Assets. Only applicable to Inclusion based rules.</description>
        <inlineHelpText>Indicates whether to match products in Assets. Only applicable to Inclusion based rules.</inlineHelpText>
        <label>Match In Asset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MatchProductGroupId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the product group to match. Only applicable to Inclusion based rules.</description>
        <inlineHelpText>ID of the product group to match. Only applicable to Inclusion based rules.</inlineHelpText>
        <label>Match Product Group</label>
        <referenceTo>Apttus_Config2__ProductGroup__c</referenceTo>
        <relationshipLabel>Price Rule Entries (Match)</relationshipLabel>
        <relationshipName>MatchPriceRuleEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MaxProducts__c</fullName>
        <description>The maximum number of products that may be selected for the rule to apply. Only applicable to Volume based rules.</description>
        <label>Max Products</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MaxQuantity__c</fullName>
        <description>The maximum quantity of products that may be selected for the rule to apply. Only applicable to Volume based rules.</description>
        <label>Max Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MinProducts__c</fullName>
        <description>The minimum number of products that must be selected for the rule to apply. Only applicable to Volume based rules.</description>
        <label>Min Products</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MinQuantity__c</fullName>
        <description>The minimum quantity of products that must be selected for the rule to apply. Only applicable to Volume based rules.</description>
        <label>Min Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PriceOverride__c</fullName>
        <description>The price override</description>
        <label>Price Override</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PriceRuleId__c</fullName>
        <description>ID of the associated rule</description>
        <label>Price Rule</label>
        <referenceTo>Apttus_Config2__PriceRule__c</referenceTo>
        <relationshipLabel>Entries</relationshipLabel>
        <relationshipName>RuleEntries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductCategory__c</fullName>
        <description>The product category associated with the rule. Only applicable to Volume based rules.</description>
        <label>Product Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductFamilies__c</fullName>
        <description>The list of product families associated with the entry</description>
        <inlineHelpText>The list of product families associated with the entry</inlineHelpText>
        <label>Product Families</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductFamily__c</fullName>
        <description>The product family associated with the rule. Only applicable to Volume based rules.</description>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductGroupId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the product group associated with the rule. Only applicable to Volume or Inclusion based rules.</description>
        <label>Product Group</label>
        <referenceTo>Apttus_Config2__ProductGroup__c</referenceTo>
        <relationshipLabel>Price Rule Entries</relationshipLabel>
        <relationshipName>PriceRuleEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductGroups__c</fullName>
        <description>The list of product groups associated with the entry</description>
        <inlineHelpText>The list of product groups associated with the entry</inlineHelpText>
        <label>Product Groups</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Products__c</fullName>
        <description>The list of products associated with the entry</description>
        <inlineHelpText>The list of products associated with the entry</inlineHelpText>
        <label>Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Quantity__c</fullName>
        <description>The quantity associated with the rule</description>
        <inlineHelpText>The quantity associated with the rule</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Sequence__c</fullName>
        <description>The rule entry sequence</description>
        <label>Sequence</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__StartFactor__c</fullName>
        <description>The start factor for a weighted range.</description>
        <label>Start Factor</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TermPeriodStart__c</fullName>
        <description>The term period start indicator</description>
        <inlineHelpText>The term period start indicator</inlineHelpText>
        <label>Term Period Start</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>At Begin Of Term</fullName>
                </value>
                <value>
                    <fullName>At End Of Term</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Term__c</fullName>
        <description>The term associated with the rule</description>
        <inlineHelpText>The term associated with the rule</inlineHelpText>
        <label>Term</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <label>Price Rule Entry</label>
    <nameField>
        <displayFormat>RE-{0000000000}</displayFormat>
        <label>Rule Entry Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Rule Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>